[package]
name = "roth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
miette = { version = "3.3.0", features = ["fancy"] }
reedline = "0.2.0"
fancy-regex = "0.7.1"

[dev-dependencies]
expect-test = "1.2.2"
